<resources>
    <string name="app_name">OPUS</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="todo">TODO</string>
    <string name="password">Password</string>
    <string name="email">riquelglesias@gmail.ocm</string>
    <string name="company_name">Company Name</string>
    <string name="letsStart">Lets start with</string>
    <string name="login">Log In!</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="tv_add_profile_image">Add Profile Image</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="create_an_account">Create an account</string>
    <string name="are_you_a_job_seeker">Are you a job seeker?</string>
    <string name="btn_log_in_txt">Log In</string>
    <string name="create_account">Create Account</string>
    <string name="select_country">Select Country</string>
    <string name="select_city">Select City</string>
    <string name="mobile_no">Mobile No</string>
    <string name="cr_number">CR Number</string>
    <string name="create_password">Create Password</string>
    <string name="post_a_job">Post a Job</string>
    <string name="you_did_not_post_any_job_yet">You didn’t post any job yet!</string>
    <string name="post_job">Post Job</string>
    <string name="job_title">Job Title</string>
    <string name="job_summary_optional">Job Summary (Optional)</string>
    <string name="working_hours">Working Hours</string>
    <string name="starting_time">Starting Time</string>
    <string name="expired_date">Expired Date</string>
    <string name="location">Location</string>
    <string name="reset_password">Reset Password</string>
    <string name="get_otp">Get OTP</string>
    <string name="otp_code_for_verification">OTP code for verification</string>
    <string name="enter_your_email">Enter your email which is connected to your ccount,we will send a</string>
    <string name="enter_your_email_">Enter your email</string>
    <string name="riquelglesioas_gmail_com">riquelglesioas@gmail.com</string>
    <string name="enter_otp">Enter OTP</string>
    <string name="otp_desc">Enter the OTP that we have sent to your email. Please do not share</string>
    <string name="otp_desc_two">the code with anyone</string>
    <string name="submit_otp">Submit OTP</string>
    <string name="create_new_password">Create New Password</string>
    <string name="save_changes">Save Changes</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="new_password">New Password</string>
</resources>