<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorAthensGrayBG"
    tools:context=".ui.fragments.auth.ForgotPasswordFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:paddingStart="@dimen/_15sdp"
        android:paddingEnd="@dimen/_15sdp"
        app:layout_constraintBottom_toTopOf="@+id/containerBtnCreateAccount"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/glOne"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent=".2" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/containerTop"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="45dp"
            app:layout_constraintTop_toTopOf="parent">


            <ImageView
                android:id="@+id/ivArrowLeft"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_arrow_left"
                app:layout_constraintBottom_toBottomOf="@+id/tvResetPassword"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/tvResetPassword"
                app:tint="#040D1B" />

            <TextView
                android:id="@+id/tvResetPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_15sdp"
                android:fontFamily="@font/outfit_medium"
                android:text="@string/reset_password"
                android:textColor="@color/colorSharkTitle"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintStart_toEndOf="@+id/ivArrowLeft"
                app:layout_constraintTop_toTopOf="parent" />


        </androidx.constraintlayout.widget.ConstraintLayout>

        <LinearLayout
            android:id="@+id/containerResetPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/custom_reset_pass_container_background"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            app:layout_constraintTop_toBottomOf="@+id/glOne">

            <TextView
                android:id="@+id/tvEnterEmail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_6sdp"
                android:fontFamily="@font/outfit_semi_bold"
                android:text="@string/enter_your_email_"
                android:textColor="#040D1B"
                android:textSize="23sp"
                app:layout_constraintEnd_toEndOf="@+id/btnLogIn"
                app:layout_constraintStart_toStartOf="@+id/btnLogIn"
                app:layout_constraintTop_toBottomOf="@+id/btnLogIn" />

            <TextView
                android:id="@+id/tvDesc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:fontFamily="@font/outfit_medium"
                android:text="@string/enter_your_email"
                android:textColor="@color/colorDesc"
                android:textSize="10sp"
                app:layout_constraintEnd_toEndOf="@+id/btnLogIn"
                app:layout_constraintStart_toStartOf="@+id/btnLogIn"
                app:layout_constraintTop_toBottomOf="@+id/btnLogIn" />

            <TextView
                android:id="@+id/tvDescTwo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:fontFamily="@font/outfit_medium"
                android:text="@string/otp_code_for_verification"
                android:textColor="@color/colorDesc"
                android:textSize="10sp"
                app:layout_constraintEnd_toEndOf="@+id/btnLogIn"
                app:layout_constraintStart_toStartOf="@+id/btnLogIn"
                app:layout_constraintTop_toBottomOf="@+id/btnLogIn" />

            <EditText
                android:id="@+id/etEmail"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_50sdp"
                android:layout_marginHorizontal="@dimen/_15sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:background="@drawable/custom_et_email_background"
                android:fontFamily="@font/outfit_medium"
                android:hint="@string/riquelglesioas_gmail_com"
                android:paddingStart="@dimen/_20sdp"
                android:paddingEnd="@dimen/_25sdp"
                android:textColor="@color/colorEmailAndPassword"
                android:textSize="13sp" />

        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/containerBtnCreateAccount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:padding="20dp"
        app:layout_constraintBottom_toBottomOf="parent">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/glStart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent=".16" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/glEnd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent=".84" />

        <TextView
            android:id="@+id/btnGetOtp"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:background="@drawable/custom_btn_login_background"
            android:fontFamily="@font/outfit_medium"
            android:gravity="center"
            android:text="@string/get_otp"
            android:textColor="@color/white"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/glEnd"
            app:layout_constraintStart_toStartOf="@+id/glStart" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>